fix image on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,9 @@ body {
     align-items: center;
     justify-content: center;
     text-align: left;
-    width: 80%;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .text-container h1, .text-container h4 {
